# panda-rl-kit

./: .dockerignore  .gitmodules  CITATION.cff  README.md  requirements.txt
docker/: Dockerfile  Dockerfile.ros2  Dockerfile.safe_learning  Dockerfile.training_submodule  docker-compose.yaml
fep_rl_experiment/: CMakeLists.txt  package.xml
fep_rl_experiment/launch/: bringup_real.launch  bringup_sim.launch
fep_rl_experiment/nodes/: dummy_cube_publisher.py  dummy_image_publisher.py  online_learning.py  robot_interface.py
fep_rl_experiment/src/fep_rl_experiment/: environment.py  experiment_driver.py  logger.py  robot.py  session.py  transitions_server.py
fep_rl_experiment_ros2/: CMakeLists.txt  DOCKER.md  README.md  package.xml  setup.cfg  setup.py
fep_rl_experiment_ros2/fep_rl_experiment_ros2/: __init__.py  dummy_cube_publisher.py  dummy_image_publisher.py  environment.py  experiment_driver.py  logger.py  online_learning.py  plot.py  robot.py  robot_interface.py  session.py  transitions_server.py
fep_rl_experiment_ros2/launch/: bringup_real.launch.py  bringup_sim.launch.py  cube_detection.launch.py
scripts/: remote_training.bash
setup/: README.hardware.md  README.safe_learning.md  README.software.md  README.training_submodule.md  README.troubleshooting.md
setup/qr/: generate_qr.py
